Version 0.5.0   -
  - Support multi-line comments in XML mappings
  - Generate List_Bean types for the XML mapped queries
  - Add support for Ada enum generation

Version 0.4.0	- Sep 2011
  - Generate ADO database queries
  - Generate Mysql and Sqlite schemas
  - Create the Mysql database and tables
  - Generate AWA modules with the new 'add-module' command

Version 0.3.0	- May 2011
  - Generate ADO database model
  - Generate a basic AWA/ASF project