@@ -2,6 +2,8 @@ Version 0.5.0   -
   - Support multi-line comments in XML mappings
   - Generate List_Bean types for the XML mapped queries
   - Add support for Ada enum generation
+  - Add test template generation
+  - Add AWA service template generation
 
 Version 0.4.0	- Sep 2011
   - Generate ADO database queries
